[package]
name = "finances"
version = "0.0.0"
authors = ["SLourenco <sergio.santos.lourenco@protonmail.com>"]
edition = "2018"
repository = "https://github.com/yuulive/finances"
readme = "README.md"
license = "MIT"
description = "Use Rust to Validate and Extract information from N.I.N.s."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }